--- a/FacadePlatform/src/main/resources/templates/footer.html
+++ b/FacadePlatform/src/main/resources/templates/footer.html
@@ -30,6 +30,8 @@
         <script src="/static/plugins/toastr/toastr.min.js"></script>
         <!-- input mask -->
         <script src="/static/plugins/input-mask/dist/jquery.inputmask.bundle.js"></script>
+        <!-- jquery form -->
+        <script src="/static/plugins/jquery-form/jquery.form.min.js"></script>
         <!-- basic config -->
         <script src="/static/js/config.js"></script>
     </div>
