--- a/FacadePlatform/src/main/resources/templates/mutation/student/result.html
+++ b/FacadePlatform/src/main/resources/templates/mutation/student/result.html
@@ -9,6 +9,12 @@
             height: 500px;
             overflow: scroll;
         }
+        .nerual-inactive {
+            color: grey;
+        }
+        .nerual-active {
+            color: #00a65a !important;
+        }
     </style>
 </head>
 <body class="hold-transition skin-black sidebar-mini">
@@ -32,16 +38,19 @@
                     <div class="box">
                         <div class="box-header with-border">
                             <h3 class="box-title">结果</h3>
-                            <div class="box-tools">
-                                <div class="btn-group pull-right">
-                                    <a href="/mutation/s/exam" class="btn btn-sm btn-default">
-                                        <i class="fa fa-arrow-left"></i>
-                                        &nbsp;返回
-                                    </a>
-                                </div>
-                            </div>
+                            <!--<div class="box-tools">-->
+                                <!--<div class="btn-group pull-right">-->
+                                    <!--<a href="/mutation/s/exam" class="btn btn-sm btn-default">-->
+                                        <!--<i class="fa fa-arrow-left"></i>-->
+                                        <!--&nbsp;返回-->
+                                    <!--</a>-->
+                                <!--</div>-->
+                            <!--</div>-->
                             <div class="row" style="padding-top: 30px">
                                 <div class="col-sm-12 form-horizontal">
+                                    <input type="hidden" name="userId" th:value="${userId}"/>
+                                    <input type="hidden" name="examId" th:value="${examId}"/>
+                                    <input type="hidden" name="modelId" th:value="${modelId}"/>
                                     <div class="form-group">
                                         <label class="control-label col-sm-2">选择图片</label>
                                         <div class="col-sm-7">
@@ -72,8 +81,24 @@
                             </div>
                         </div>
                         <div class="box-body">
-                            <div id="chart" class="col-sm-12" style="height: 500px">
-
+                            <!--<div id="chart" class="col-sm-12" style="height: 500px">-->
+                            <!--</div>-->
+                            <h4>神经元激活</h4>
+                            <div id="nerual_graph">
+                                <!--<div class="col-sm-12">-->
+                                    <!--<div class="col-sm-2">-->
+                                        <!--第1层-->
+                                    <!--</div>-->
+                                    <!--<div class="col-sm-10">-->
+                                        <!--<i class="fa fa-circle nerual-active" title="Tooltip on top"></i>-->
+                                        <!--<i class="fa fa-circle nerual-inactive" title="Tooltip on top"></i>-->
+                                        <!--<i class="fa fa-circle nerual-inactive" title="Tooltip on top"></i>-->
+                                        <!--<i class="fa fa-circle nerual-inactive" title="Tooltip on top"></i>-->
+                                        <!--<i class="fa fa-circle nerual-inactive" title="Tooltip on top"></i>-->
+                                        <!--<i class="fa fa-circle nerual-inactive" title="Tooltip on top"></i>-->
+                                        <!--<i class="fa fa-circle nerual-active" title="Tooltip on top"></i>-->
+                                    <!--</div>-->
+                                <!--</div>-->
                             </div>
                         </div>
                     </div>
