完成前端大部分功能

--- a/FacadePlatform/src/main/resources/templates/aside.html
+++ b/FacadePlatform/src/main/resources/templates/aside.html
@@ -32,7 +32,7 @@
                 <!--<li th:classappend="${level2 == 'bank' ? 'active' : ''}"><a href="/mutation/bank"><i class="fa fa-circle-o"></i> 题库</a></li>-->
             </ul>
         </li>
-        <li th:classappend="${level1 == 'mr'? 'active' : ''}">
+        <li class="treeview" th:classappend="${level1 == 'mr'? 'active' : ''}">
             <a href="#">
                 <i class="fa fa-bug"></i> <span>蜕变测试</span>
                 <span class="pull-right-container">
@@ -77,7 +77,7 @@
                 <li th:classappend="${level2 == 'bank' ? 'active' : ''}"><a href="/mutation/bank"><i class="fa fa-circle-o"></i> 题库</a></li>
             </ul>
         </li>
-        <li th:classappend="${level1 == 'mr'? 'active' : ''}">
+        <li class="treeview" th:classappend="${level1 == 'mr'? 'active' : ''}">
             <a href="#">
                 <i class="fa fa-bug"></i> <span>蜕变测试</span>
                 <span class="pull-right-container">
