--- a/FacadePlatform/src/main/resources/templates/mutation/teacher/exam.html
+++ b/FacadePlatform/src/main/resources/templates/mutation/teacher/exam.html
@@ -50,7 +50,7 @@
                                             <div class="col-sm-6">
                                                 <button id="search_button" class="btn btn-info btn-sm" type="button">搜索</button>
                                                 <button class="btn btn-default btn-sm" type="reset" style="margin-left: 5px">重置</button>
-                                                <a id="create_button" href="/mutation/exam/new" class="btn btn-success btn-sm" style="margin-left: 5px">新增题库</a>
+                                                <a id="create_button" href="/mutation/exam/new" class="btn btn-success btn-sm" style="margin-left: 5px">新增考试</a>
                                             </div>
                                         </div>
                                     </div>
