--- a/FacadePlatform/src/main/resources/templates/home.html
+++ b/FacadePlatform/src/main/resources/templates/home.html
@@ -20,30 +20,30 @@
     </section>
     <section class="content">
         <div class="row">
-            <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="info-box">
-                    <span class="info-box-icon bg-aqua"><i class="ion ion-ios-paper-outline"></i></span>
+            <!--<div class="col-md-3 col-sm-6 col-xs-12">-->
+                <!--<div class="info-box">-->
+                    <!--<span class="info-box-icon bg-aqua"><i class="ion ion-ios-paper-outline"></i></span>-->
 
-                    <div class="info-box-content">
-                        <span class="info-box-text">Exams</span>
-                        <span class="info-box-number">10</span>
-                    </div>
-                    <!-- /.info-box-content -->
-                </div>
-                <!-- /.info-box -->
-            </div>
-            <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="info-box">
-                    <span class="info-box-icon bg-yellow"><i class="ion ion-ios-people-outline"></i></span>
+                    <!--<div class="info-box-content">-->
+                        <!--<span class="info-box-text">Exams</span>-->
+                        <!--<span class="info-box-number">10</span>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash; /.info-box-content &ndash;&gt;-->
+                <!--</div>-->
+                <!--&lt;!&ndash; /.info-box &ndash;&gt;-->
+            <!--</div>-->
+            <!--<div class="col-md-3 col-sm-6 col-xs-12">-->
+                <!--<div class="info-box">-->
+                    <!--<span class="info-box-icon bg-yellow"><i class="ion ion-ios-people-outline"></i></span>-->
 
-                    <div class="info-box-content">
-                        <span class="info-box-text">Members</span>
-                        <span class="info-box-number">200</span>
-                    </div>
-                    <!-- /.info-box-content -->
-                </div>
-                <!-- /.info-box -->
-            </div>
+                    <!--<div class="info-box-content">-->
+                        <!--<span class="info-box-text">Members</span>-->
+                        <!--<span class="info-box-number">200</span>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash; /.info-box-content &ndash;&gt;-->
+                <!--</div>-->
+                <!--&lt;!&ndash; /.info-box &ndash;&gt;-->
+            <!--</div>-->
         </div>
     </section>
 </div>
