未知的覆盖提交终结者

--- a/FacadePlatform/src/main/resources/templates/mutation/student/exercise.html
+++ b/FacadePlatform/src/main/resources/templates/mutation/student/exercise.html
@@ -52,12 +52,12 @@
                                         <label class="form-control" th:text="${exam == null ? '' : exam.name}"></label>
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <label class="col-sm-2 control-label">考试描述</label>
-                                    <div class="col-sm-9">
-                                        <label class="form-control" th:text="${exam == null ? '' : exam.description}"></label>
-                                    </div>
-                                </div>
+                                <!--<div class="form-group">-->
+                                    <!--<label class="col-sm-2 control-label">考试描述</label>-->
+                                    <!--<div class="col-sm-9">-->
+                                        <!--<label class="form-control" th:text="${exam == null ? '' : exam.description}"></label>-->
+                                    <!--</div>-->
+                                <!--</div>-->
                                 <!--<div class="form-group">-->
                                     <!--<label class="col-sm-2 control-label">杀死模型ID</label>-->
                                     <!--<div class="col-sm-9">-->
