--- a/FacadePlatform/src/main/resources/templates/mutation/teacher/bank-new.html
+++ b/FacadePlatform/src/main/resources/templates/mutation/teacher/bank-new.html
@@ -59,7 +59,7 @@
                                     <label class="control-label col-sm-2">标准模型</label>
                                     <div class="col-sm-9">
                                         <div id="standard_model_facade" class="form-control" style="overflow: hidden; cursor: pointer"></div>
-                                        <input id="standard_model" name="standard_model" type="file" style="display: none"/>
+                                        <input id="standard_model" name="standardModel" type="file" style="display: none"/>
                                     </div>
                                 </div>
                                 <div class="form-group">
